bdr.BDR2.scala.error
Erreur de compilation :
BDR2:5: error: too many arguments for method left: ()Unit
  case "I" => left(2);forward();
                  ^