bdr.BDR2.scala.code
var finished = false
readMessage() match{
  case "R" => right();forward();
  case "L" => left();forward();
  case "I" => left(2);forward();
  case "A" => forward()
  case "B" => forward(2)
  case "C" => forward(3)
  case "D" => forward(4)
  case "E" => forward(5)
  case "F" => forward(6)
  case "Z" => backward()
  case "Y" => backward(2)
  case "X" => backward(3)
  case "W" => backward(4)
  case "V" => backward(5)
  case "U" => backward(6)
  case _ => finished = true;
 }